# VMC_Tool

./: future.py  main.py  pyproject.toml  vmdata.py
templates/: 404.html  base.html  index.html  summary.html  uploadError.html  vmlist.html
uploads/: 2T-RVTool-Dec22.xlsx  RVTools_export_all_2022-11-23_11.20.06.xlsx  RVTools_export_all_2022-12-02_13.51.43.xlsx  RVTools_export_all_2023-01-13_12.06.03-CRG.xlsx
