[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
Flask-Bootstrap = "^3.3.7"
Flask-Table = "^0.5.0"
Flask-WTF = "^1.1.1"
flask-paginate = "^2022.1.8"
SimpleCache = "^0.1.2"
cachelib = "^0.10.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"